--- a/app/src/main/res/layout/activity_besoin_aide.xml
+++ b/app/src/main/res/layout/activity_besoin_aide.xml
@@ -5,33 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
-    tools:context=".Account">
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/anonyme"
-        android:scaleType="fitCenter"/>
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/name"/>
+    tools:context=".BesoinAide">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center">
         <TextView
             android:id="@+id/helpywork"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="HELPYWORK"
+            android:text="Type d'aide :"
             android:fontFamily="casual"
             android:textStyle="bold"
             android:textColor="#265CCD"
             android:textSize="20dp"
-            android:layout_margin="10dp"/>
+            android:layout_margin="20dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,19 +34,21 @@
                 android:id="@+id/teacherText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Vous voulez aider"
+                android:text="Aide en ligne"
                 android:textColor="#666666"
                 android:fontFamily="casual"
                 android:textSize="20dp" />
 
             <ImageButton
-                android:id="@+id/teacherButton"
+                android:id="@+id/aideEnLigne"
                 android:layout_width="258dp"
-                android:layout_height="154dp"
-                android:onClick="onClick"
+                android:layout_height="137dp"
+                android:onClick="onClickenLigne"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/teacher" />
+                app:srcCompat="@drawable/enligne"
+                android:background="@color/transparent"/>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -67,19 +59,22 @@
                 android:id="@+id/studentText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Vous avez besoin d'aide"
+                android:text="Aide à domicile"
                 android:textColor="#666666"
                 android:fontFamily="casual"
                 android:textSize="20dp"/>
 
             <ImageButton
-                android:id="@+id/studentButton"
+                android:id="@+id/aideADomicile"
                 android:layout_width="258dp"
                 android:layout_height="137dp"
-                android:onClick="onClick"
+                android:onClick="onClickDomicile"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/etudiant" />
+                app:srcCompat="@drawable/domicile"
+                android:background="@color/transparent"/>
         </LinearLayout>
     </LinearLayout>
+
+
 
 </LinearLayout>
