--- a/app/src/main/res/layout/activity_aide_en_ligne.xml
+++ b/app/src/main/res/layout/activity_aide_en_ligne.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center"
-        >
+        android:gravity="center">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -21,7 +20,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/start_display"
+                android:text="Ajout d'un problème"
                 android:textAlignment="center"
                 android:textColor="#265CCD"
                 android:textSize="30dp"
@@ -32,11 +31,11 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center"
-                android:layout_margin="30dp">
+                android:layout_margin="20dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="LOGIN"
+                    android:text="Problème"
                     android:textSize="25dp"
                     android:textColor="#666666"
                     android:fontFamily="casual"/>
@@ -49,7 +48,7 @@
                     android:textAlignment="center"
                     android:inputType="text"
                     android:backgroundTint="#000"
-                    android:hint="@string/login"/>
+                    android:hint="Nom du problèmre"/>
             </LinearLayout>
 
             <LinearLayout
@@ -57,11 +56,11 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center"
-                android:layout_margin="30dp">
+                android:layout_margin="20dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="MOT DE PASSE"
+                    android:text="Description"
                     android:textSize="25dp"
                     android:textColor="#666666"
                     android:fontFamily="casual"/>
@@ -73,42 +72,33 @@
                     android:layout_marginStart="50dp"
                     android:layout_marginEnd="50dp"
                     android:backgroundTint="#000"
-                    android:inputType="textPassword"
-                    android:hint="@string/password"
+                    android:hint="Décrivez votre problème"
                     android:textAlignment="center" />
             </LinearLayout>
+
+            <Spinner
+                android:id="@+id/spinnerMatiere"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="50dp"
+                android:layout_margin="20dp"/>
+
+            <Spinner
+                android:id="@+id/spinnerNiveau"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="50dp"
+                android:layout_margin="20dp"/>
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Connexion"
-                android:onClick="onClick"
+                android:text="Poster"
                 android:layout_margin="5dp"/>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/noAccount"
-                    android:fontFamily="casual"
-                    android:textSize="20dp"
-                    android:textAlignment="center"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:clickable="true"
-                    android:fontFamily="casual"
-                    android:textSize="15dp"
-                    android:textColor="#265CCD"
-                    android:text="S'inscrire"
-                    android:onClick="createAccount"/>
-            </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
